infra/k8s/digest.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digest-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: digest-service
  template:
    metadata:
      labels:
        app: digest-service
    spec:
      containers:
      - name: digest-service
        image: unreaalism/vigil-digest:latest
        ports:
        - containerPort: 3000
        #envFrom:
        #- secretRef:
        #    name: digest-secrets
        #- configMapRef:
        #    name: digest-config
