infra/k8s/gateway.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
      - name: gateway-service
        image: unreaalism/vigil-gateway:latest
        ports:
        - containerPort: 3000
        #envFrom:
        #- secretRef:
        #    name: gateway-secrets
        #- configMapRef:
        #    name: gateway-config
