infra/k8s/portal.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-service
  namespace: services
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portal-service
  template:
    metadata:
      labels:
        app: portal-service
    spec:
      containers:
        - name: portal-service
          image: unreaalism/vigil-portal:latest
          ports:
            - containerPort: 3000
