infra/k8s/digest.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digest-service
spec:
  selector:
    app: digest-service
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
