infra/k8s/gateway.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: services
spec:
  selector:
    app: gateway-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
