infra/k8s/ml.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-service
  namespace: services
spec:
  selector:
    app: ml-service
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
