infra/k8s/portal.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-service
  namespace: services
spec:
  selector:
    app: portal-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
