infra/k8s/viz.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: viz-service
spec:
  selector:
    app: viz-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
