infra/k8s/ngrok.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-service
  namespace: default
spec:
  ingressClassName: ngrok
  rules:
    - host: "extremely-sincere-drake.ngrok-free.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 3000
